devops/k8s/phpmyadmin/3.phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: devops-namespace
  labels:
    name: phpmyadmin-service
    tier: devops

spec:
  # type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30800
  selector:
    name: phpmyadmin-pod
    tier: devops
