devops/k8s/phpmyadmin/5.phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: devops-namespace
  annotations:
    cert-manager.io/issuer: phpmyadmin-letsencrypt-nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    # add_header X-Frame-Options "sameorigin";
    # add_header X-Content-Type-Options "nosniff";
    # charset utf-8;
    # include "/etc/nginx/mime.types";
spec:
  rules:
    - host: phpmyadmin.hodiapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80

  tls:
    # prettier-ignore
    - hosts:
      - phpmyadmin.hodiapp.com
      # Name of the secret used to terminate TLS traffic on port 443.
      secretName: phpmyadmin-letsencrypt-nginx-secret

  ingressClassName: nginx
